--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <title>Indecision - React Practice</title>
+        <link rel='icon' type='iamge/ico' href='./images/favicon.ico' />
     </head>
     <body>
         <div id="app"></div>
